--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-# spring.application.name=api-server
 spring:
   datasource:
     url: ${DB_URL}
@@ -7,9 +6,15 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+# disable spring security's basic auth
+security:
+  basic:
+    enabled: false
+# debug true for development
+debug: true
