feat(Jwt): Add Jwt libraries and JwtService
- add config to create jwt properties with values defined in application.yml file (which uses environment variables)
- add TokenService which creates and validates jwt token

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,8 @@ logging:
         orm:
           jdbc:
             bind: trace
+# jwt token configuration
+jwt:
+  key: ${JWT_KEY}
+  access-token-expiration: 60000
+  refresh-token-expiration: 300000
