feat(OpenAI): Add OpenAI basic template
- add necessary dependencies
  - OpenAI Library: com.aallam.openai:openai-client
  - http client engine for OpenAI Library: io.ktor:ktor-client-okhttp
  - necessary coroutine reactor for OpenAI library api calls: org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.8.1
- add docker-compose.yml with postgres db
  - need to add other infrastructures / dockerfile for deployment & dev usage on client side
- add OpenAIClient

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,7 @@ jwt:
   key: ${JWT_KEY}
   access-token-expiration: 60000
   refresh-token-expiration: 300000
+# openai configuration
+openai:
+  token: ${OPENAI_API_KEY}
+  organization: ${OPENAI_ORGANIZATION}
